--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codeial",
-  "version": "0.1.0",
+  "name": "codeial_client",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,5 +39,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Codeial ------------",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BhanuJodha3466/Codeial-Client.git"
+  },
+  "author": "Bhanu Pratap Singh Rathore",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BhanuJodha3466/Codeial-Client/issues"
+  },
+  "homepage": "/v2"
 }
